@@ -1,4 +1,4 @@
-// $Id: sys.h,v 1.11 2006-08-20 11:19:52 zeeb90au Exp $
+// $Id: sys.h,v 1.12 2007-04-28 05:28:04 zeeb90au Exp $
 // -*- c-file-style: "java" -*-
 // This file is part of SmallBASIC
 //
@@ -386,8 +386,8 @@ typedef unsigned int    addr_t;
 *   SB's constants
 */
 
-#define SB_STR_VER      "0.9.7"
-#define SB_DWORD_VER    0x907   // 00 (major) 08 (minor) 03 (patch) 
+#define SB_STR_VER      "0.9.8"
+#define SB_DWORD_VER    0x908   // 00 (major) 08 (minor) 03 (patch) 
 
 #if defined(OS_LIMITED)
     #define SB_PANICMSG_SIZE    255     
